# lib/api/v2/routers/SwapRouter.ts
@@ -498,6 +498,56 @@ class SwapRouter extends RouterBase {
      * @openapi
      * components:
      *   schemas:
+     *     ReverseTransaction:
+     *       type: object
+     *       properties:
+     *         id:
+     *           type: string
+     *           description: ID the lockup transaction
+     *         hex:
+     *           type: string
+     *           description: Lockup transaction as raw HEX
+     *         timeoutBlockHeight:
+     *           type: number
+     *           description: Block height at which the time-lock expires
+     */
+
+    /**
+     * @openapi
+     * /swap/reverse/{id}/transaction:
+     *   get:
+     *     tags: [Reverse]
+     *     description: Get the lockup transaction of a Reverse Swap
+     *     parameters:
+     *       - in: path
+     *         name: id
+     *         required: true
+     *         schema:
+     *           type: string
+     *         description: ID of the Reverse Swap
+     *     responses:
+     *       '200':
+     *         description: The lockup transaction of the Reverse Swap and accompanying information
+     *         content:
+     *           application/json:
+     *             schema:
+     *               $ref: '#/components/schemas/ReverseTransaction'
+     *       '400':
+     *         description: Error that caused the request to fail
+     *         content:
+     *           application/json:
+     *             schema:
+     *               $ref: '#/components/schemas/ErrorResponse'
+     */
+    router.get(
+      '/reverse/:id/transaction',
+      this.handleError(this.getReverseTransaction),
+    );
+
+    /**
+     * @openapi
+     * components:
+     *   schemas:
      *     ReverseClaimRequest:
      *       type: object
      *       properties:
@@ -765,6 +815,20 @@ class SwapRouter extends RouterBase {
     this.logger.silly(`Reverse swap ${response.id}: ${stringify(response)}`);
 
     createdResponse(res, response);
+  };
+
+  private getReverseTransaction = async (req: Request, res: Response) => {
+    const { id } = validateRequest(req.params, [
+      { name: 'id', type: 'string' },
+    ]);
+
+    const { transactionHex, transactionId, timeoutBlockHeight } =
+      await this.service.getReverseSwapTransaction(id);
+    successResponse(res, {
+      id: transactionId,
+      hex: transactionHex,
+      timeoutBlockHeight,
+    });
   };
 
   private claimReverse = async (req: Request, res: Response) => {
