# swagger-spec.json
@@ -858,6 +858,47 @@
         }
       }
     },
+    "/swap/reverse/{id}/transaction": {
+      "get": {
+        "tags": [
+          "Reverse"
+        ],
+        "description": "Get the lockup transaction of a Reverse Swap",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID of the Reverse Swap"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The lockup transaction of the Reverse Swap and accompanying information",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReverseTransaction"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error that caused the request to fail",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/swap/reverse/claim": {
       "post": {
         "description": "Requests a partial signature for a cooperative Reverse Swap claim transaction",
@@ -1299,6 +1340,23 @@
           "blindingKey": {
             "type": "string",
             "description": "Liquid blinding private key encoded as HEX"
+          }
+        }
+      },
+      "ReverseTransaction": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "ID the lockup transaction"
+          },
+          "hex": {
+            "type": "string",
+            "description": "Lockup transaction as raw HEX"
+          },
+          "timeoutBlockHeight": {
+            "type": "number",
+            "description": "Block height at which the time-lock expires"
           }
         }
       },
